<resources>
    <string name="app_name">Team22</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to LoginActivity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="home">Home</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="current_requests">Current Requests</string>
    <string name="post_a_new_request">Post a new Request</string>
    <string name="find_work">Find Work</string>
    <string name="post_job">Post Job</string>
    <string name="profile">Profile</string>
    <string name="Title">Title:</string>
    <string name="reqeust_title">Reqeust Title</string>
    <string name="description">Description:</string>
    <string name="request_description">jobRequest description</string>
    <string name="i_need_help_now">I Need Help Now</string>
    <string name="i_need_help_later">I Need Help Later</string>
    <string name="request_title">Request Title</string>
    <string name="work_now">Work Now</string>
    <string name="work_later">Work Later</string>
    <string name="jason_desc">I am a 23 year old student at U of T. I am able to assist with pretty much anything. Hard working and looking to make some money to help with school. Best, Jason</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
